--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title: "GEBRA: Week 2, How to set goals"
-date: 2024-10-09
+title: "GEBRA: Week 3, Product Market Fit for genomic diagnosis software"
+date: 2024-11-21
 tags: GEBRA
 categories: GEBRA
 published: false
@@ -13,6 +13,7 @@ author: Yongjun Song
 {% assign difference_in_seconds = current_date | minus: past_date %}
 {% assign days_difference = difference_in_seconds | divided_by: 86400 | floor %}
 
+Let's talk about Product Market Fit  today.
 
 ## Product Market Fit
 
@@ -22,16 +23,108 @@ Product Market Fit (PMF) is defined as the point when or the degree to which a p
 
 The pyramid illustrates components of PMF. These components correspond to the steps one needs to take to find product market fit.
 
+Steps required to find PMF:
+
 1. Define the market
 2. Understand market's pain point
 3. Align value proposition
-4. Develop your product accordingly
-5. and continue
+4. Develop your product (Features & UX)
+5. Iterate
 
 
-In this perspective, GEBRA project has already went through some .
-
-## Redefining the market
+## Market of variant interpretation software
 
 We couldn't aim for the same client with WES and WGS that the company has provided for years as GEBRA, by its nature, is different from the genomic tests. 
 
+Market of the interpretation software can be defined using the image below.
+
+![Market definition from NetMBA.com](assets/image/marketdefinition_NetMBA.com.gif)
+
+Potential Market:
+
+As we define GEBRA as an interpretation software that provides accurate interpretation of genomic test and increases productivity for those who are working in the field of genomic testing, the potential market is as large as the market of genomic test.
+
+Available Market:
+
+Available Market would be those who are performing the genomic test by themselves. Institutions, corelabs, hospitals and service providers such as 3billion itself are good examples.
+
+Penetrated Market:
+
+Those who are using the product consist penetrated market. Multiple hospitals, diagnostic labs, etc have adopted interpretation software.
+
+## Pain point of the market
+
+After defining market we need to find out the pain point that the market has.
+The purpose of discovering market's pain point lies in simple two lines.
+
+Considering a simple equation,
+
+$\text{Value} = \text{Benefits} - \text{Cost}$
+
+To increase the value of the product we should focus on:
+1. Expanding the benefit of the market
+2. Reducing the cost of the market
+
+The purpose of finding out the pain point is in both 1. and 2.
+
+Discovery of the pain point can be done by numerous methods, but 3billion took simple approaches by:
+
+1. Interviewing users
+2. Having an internal expert
+
+Through multiple iterations of user interview, and thanks to our in-house genetics team. We were able to discover the pain point, and lucky for us it aligned to advantages of GEBRA. 
+
+
+## Aligning value proposition
+
+The product must be aligned with the value discovered from the pain point. This is where constant communications, tenets, and visions are needed.
+
+If the value proposition alignment was successful, these will occur:
+
+1. Customer Relevance:
+The product or service addresses a real need or pain point in the customer’s life, making the offering feel naturally relevant and worthwhile.
+
+- can be measured by: Qualitative Research (Interviews and Focus Groups), Surveys and Questionnaires, Market Segmentation Analysis, and User Testing and Observation. 
+
+2. Clear Differentiation:
+The reasons to choose your product over competitors are apparent. Customers understand how your offering stands out in ways that matter to them.
+
+- can be measured by: Competitive Benchmarking, Brand Perception Studies, Attribute Importance Mapping, and Positioning Statement Testing
+
+3. Consistent Messaging:
+The brand’s marketing communications, sales pitches, and customer experience all convey a coherent message that supports the same value promise.
+
+- can be measured by: Brand Audits, Internal Stakeholder Interviews, Content Analysis Tools, and Customer Feedback on Brand Communication
+
+4. Higher Customer Satisfaction:
+When customers get what they were led to expect, they’re more likely to be satisfied, remain loyal, and provide referrals.
+
+- can be measured by: Customer Satisfaction Surveys (CSAT), Net Promoter Score (NPS), Customer Retention and Churn Analysis, and Support Ticket Analysis and Customer Complaints
+
+The method to measure success of value proposition alignment may vary by the nature of service.
+
+## Developing product
+
+Then develope your product accordingly. 
+
+The approach of the product development may vary. Specific details of product development is not the point in this article. What I want to address is simple.
+
+In a large view, there are two dynamics of product development.
+
+1. Tech push
+
+"Tech push" refers to a strategy or situation where new technologies or products are developed primarily due to technological advancements or scientific breakthroughs within a company or research institution. In this scenario, the driving force behind introducing a product to the market is the technology itself.
+
+2. Market pull
+
+"Market pull" is the opposite scenario, where the motivation to develop or refine a product originates from identified customer needs, market demands, or emerging trends. Here, the market signals what kind of product or improvements it wants, and companies respond by creating solutions that address these explicit needs. 
+
+Personally I believe "Market pull" are often neglected in some field. There is not doubt that the technological advance must be considered and the company shall not fall behind in such trend, but I believe that the essence of the product lies in solving a problem of the customers.
+
+## Conclusion
+
+Product development is a struggle of finding PMF. PMF is constructed by 4 major building blocks(market definition, pain point discovery, value proposition alignment, and product development), and constant iteration. GEBRA is on it's way to find PMF, and I hope the result would be fruitful.
+
+Finally, I am sharing a link to one of my [favorite video from YC](https://www.ycombinator.com/library/5z-the-real-product-market-fit). Have a look and feel free to share your ideas.
+
+*Thank you for reading. Feel free to contact me by email if you have any thoughts or questions, feel free to leave a comment. See you in the next post!*  
