--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -17,55 +17,57 @@ Let's talk about Product Market Fit  today.
 
 ## Product Market Fit
 
-Product Market Fit (PMF) is defined as the point when or the degree to which a product satisfies a market demand. Even though it is vaguely defined, product market fit is a strong concept and a tool to deliver steps we need to take to build a successful business. Finding a product market fit is to make a product that solves problems and deliver it to the people who need it. It is a goal of every service providers.
+Product-Market Fit (PMF) is the point at which a product effectively satisfies a strong market demand. Although it can be defined in various ways, PMF represents a crucial concept and framework for building a successful business. Achieving PMF means creating a product that solves genuine problems and delivering it to the people who need it. It’s a key milestone for all service providers.
 
 ![Product Market Fit - by Dan Olsen](assets/image/pmf_pyramid.webp)
 
-The pyramid illustrates components of PMF. These components correspond to the steps one needs to take to find product market fit.
+The pyramid above illustrates the components of PMF, each corresponding to a step in the journey toward finding the right fit:
 
-Steps required to find PMF:
+**Steps to Find PMF:**
 
-1. Define the market
-2. Understand market's pain point
-3. Align value proposition
+1. Define your market
+2. Understand the market's pain points
+3. Align your value proposition
 4. Develop your product (Features & UX)
-5. Iterate
+5. Iterate based on feedback
 
 
 ## Market of variant interpretation software
 
-We couldn't aim for the same client with WES and WGS that the company has provided for years as GEBRA, by its nature, is different from the genomic tests. 
+WWhen it comes to variant interpretation software, we cannot simply target the same customers who purchase WES (Whole Exome Sequencing) and WGS (Whole Genome Sequencing) services. This is because GEBRA, by its very nature, differs from those genomic tests.
 
-Market of the interpretation software can be defined using the image below.
+To understand this market, consider the following diagram:
 
 ![Market definition from NetMBA.com](assets/image/marketdefinition_NetMBA.com.gif)
 
 Potential Market:
 
-As we define GEBRA as an interpretation software that provides accurate interpretation of genomic test and increases productivity for those who are working in the field of genomic testing, the potential market is as large as the market of genomic test.
+We define GEBRA as an interpretation software that provides accurate genomic test interpretation and boosts productivity for professionals in the field, then the potential market size corresponds to the entire market for genomic tests.
 
 Available Market:
 
-Available Market would be those who are performing the genomic test by themselves. Institutions, corelabs, hospitals and service providers such as 3billion itself are good examples.
+The available market would be those who conduct genomic testing themselves—this includes institutions, core labs, hospitals, and service providers (such as 3billion itself).
 
 Penetrated Market:
 
-Those who are using the product consist penetrated market. Multiple hospitals, diagnostic labs, etc have adopted interpretation software.
+Once users adopt the software, they form the penetrated market. Today, multiple hospitals, diagnostic labs, and other organizations have integrated interpretation software into their workflows.
 
-## Pain point of the market
+## Identifying the Market’s Pain Points
 
-After defining market we need to find out the pain point that the market has.
-The purpose of discovering market's pain point lies in simple two lines.
+After defining the market, the next step is to pinpoint its pain points. The core idea is to understand what challenges or inefficiencies exist, so we can address them directly.
 
-Considering a simple equation,
+A simple value equation is helpful here:
 
 $\text{Value} = \text{Benefits} - \text{Cost}$
 
-To increase the value of the product we should focus on:
+To increase product value, we can either increase the benefits or reduce the costs for the customer. Discovering the market’s pain points helps guide us in achieving both goals.
+
+How did we discover the pain points at 3billion?
+
 1. Expanding the benefit of the market
 2. Reducing the cost of the market
 
-The purpose of finding out the pain point is in both 1. and 2.
+Through multiple iterations of user interviews and insights from our internal team, we identified pain points that aligned neatly with GEBRA’s advantages.
 
 Discovery of the pain point can be done by numerous methods, but 3billion took simple approaches by:
 
@@ -75,55 +77,60 @@ Discovery of the pain point can be done by numerous methods, but 3billion took s
 Through multiple iterations of user interview, and thanks to our in-house genetics team. We were able to discover the pain point, and lucky for us it aligned to advantages of GEBRA. 
 
 
-## Aligning value proposition
+## Aligning the Value Proposition
 
-The product must be aligned with the value discovered from the pain point. This is where constant communications, tenets, and visions are needed.
+Once the pain points are clear, the product must be aligned with the value proposition—this requires constant communication, well-defined principles, and a clear vision.
 
-If the value proposition alignment was successful, these will occur:
+When value proposition alignment is successful, the following outcomes occur:
 
 1. Customer Relevance:
-The product or service addresses a real need or pain point in the customer’s life, making the offering feel naturally relevant and worthwhile.
+Customers feel the product addresses a genuine need.
 
-- can be measured by: Qualitative Research (Interviews and Focus Groups), Surveys and Questionnaires, Market Segmentation Analysis, and User Testing and Observation. 
+*Measured by*: Interviews, Surveys, Market Segmentation, User Testing
 
 2. Clear Differentiation:
-The reasons to choose your product over competitors are apparent. Customers understand how your offering stands out in ways that matter to them.
+Customers understand why your product is superior to competitors.
 
-- can be measured by: Competitive Benchmarking, Brand Perception Studies, Attribute Importance Mapping, and Positioning Statement Testing
+*Measured by*: Competitive Benchmarking, Brand Perception Studies
 
 3. Consistent Messaging:
-The brand’s marketing communications, sales pitches, and customer experience all convey a coherent message that supports the same value promise.
+Marketing, sales, and support channels communicate a cohesive message that reinforces the value proposition.
 
-- can be measured by: Brand Audits, Internal Stakeholder Interviews, Content Analysis Tools, and Customer Feedback on Brand Communication
+*Measured by*: Brand Audits, Stakeholder Interviews, Content Analysis
 
 4. Higher Customer Satisfaction:
-When customers get what they were led to expect, they’re more likely to be satisfied, remain loyal, and provide referrals.
+When customers receive the value they expect, satisfaction, loyalty, and referrals increase.
 
-- can be measured by: Customer Satisfaction Surveys (CSAT), Net Promoter Score (NPS), Customer Retention and Churn Analysis, and Support Ticket Analysis and Customer Complaints
+*Measured by*: CSAT Surveys, NPS, Customer Retention/Churn Analysis
 
-The method to measure success of value proposition alignment may vary by the nature of service.
+## Developing the Product
 
-## Developing product
-
-Then develope your product accordingly. 
-
-The approach of the product development may vary. Specific details of product development is not the point in this article. What I want to address is simple.
-
-In a large view, there are two dynamics of product development.
+With a value proposition in place, the next step is product development. While the details of development aren’t the focus here, it’s important to consider two overarching dynamics:
 
 1. Tech push
 
 "Tech push" refers to a strategy or situation where new technologies or products are developed primarily due to technological advancements or scientific breakthroughs within a company or research institution. In this scenario, the driving force behind introducing a product to the market is the technology itself.
 
+*Focus*: Advancing what is possible with new tech.
+
 2. Market pull
 
 "Market pull" is the opposite scenario, where the motivation to develop or refine a product originates from identified customer needs, market demands, or emerging trends. Here, the market signals what kind of product or improvements it wants, and companies respond by creating solutions that address these explicit needs. 
+
+*Focus*: Delivering solutions to existing problems.
 
 Personally I believe "Market pull" are often neglected in some field. There is not doubt that the technological advance must be considered and the company shall not fall behind in such trend, but I believe that the essence of the product lies in solving a problem of the customers.
 
 ## Conclusion
 
-Product development is a struggle of finding PMF. PMF is constructed by 4 major building blocks(market definition, pain point discovery, value proposition alignment, and product development), and constant iteration. GEBRA is on it's way to find PMF, and I hope the result would be fruitful.
+Product development is a continuous effort to achieve Product-Market Fit. PMF is built upon four major pillars:
+
+- Defining the market
+- Identifying pain points
+- Aligning the value proposition
+- Developing the product accordingly
+
+These steps should be repeated in a cycle of constant iteration. GEBRA is on its way to finding its PMF, and we hope the results are fruitful.
 
 Finally, I am sharing a link to one of my [favorite video from YC](https://www.ycombinator.com/library/5z-the-real-product-market-fit). Have a look and feel free to share your ideas.
 
